fix: fixed scroll smoothing on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -71,7 +71,7 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   /* scroll-behavior: smooth; */
-  overflow: hidden; /* Prevent default browser scroll behavior */
+   /* Prevent default browser scroll behavior */
 }
 
 /* html {
